# otel-profiling-python

./: .gitignore  README.md  pyproject.toml  release-please-config.json
.github/workflows/: build.yml  release-please.yml  release.yml
src/pyroscope/otel/: __init__.py
