[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyroscope-otel"
description = "A library providing profiling functionalities related to OpenTelemetry"
readme = "README.md"
version = "0.4.0"
requires-python = ">= 3.8"
dependencies = [
  "opentelemetry-api>=1.27.0, <2.0.0",
  "opentelemetry-sdk>=1.27.0, <2.0.0",
  "pyroscope-io==0.8.8"
]
license = {file = "LICENSE"}
